--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <span class="auto">Tusharkanta Rout</span>
           <p>
             Hello Everyone! My Self TusHar and I am a BCA Student and a
-            Professional Web Developer and a UI/UX Designer.
+            Gamer by Passion and Hacker by Profession.
           </p>
           <button>Hire Me</button>
         </div>
