--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".auto", {
-        strings: ["Tusharkanta Rout", "Web Developer", "UI/UX Designer"],
+        strings: ["Tusharkanta Rout", "Gamer by Passion", "Hacker by Profession"],
         typeSpeed: 80,
         backSpeed: 90,
         loop: true,
